@@ -614,6 +614,45 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+return|return
+name|fullScan
+argument_list|(
+name|catalogTracker
+argument_list|,
+name|disabledTables
+argument_list|,
+literal|false
+argument_list|)
+return|;
+block|}
+comment|/**    * Performs a full scan of<code>.META.</code>, skipping regions from any    * tables in the specified set of disabled tables.    *<p>    * Returns a map of every region to it's currently assigned server, according    * to META.  If the region does not have an assignment it will have a null    * value in the map.    *    * @param catalogTracker    * @param disabledTables set of disabled tables that will not be returned    * @param excludeOfflinedSplitParents If true, do not include offlined split    * parents in the return.    * @return map of regions to their currently assigned server    * @throws IOException    */
+specifier|public
+specifier|static
+name|Map
+argument_list|<
+name|HRegionInfo
+argument_list|,
+name|HServerAddress
+argument_list|>
+name|fullScan
+parameter_list|(
+name|CatalogTracker
+name|catalogTracker
+parameter_list|,
+specifier|final
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|disabledTables
+parameter_list|,
+specifier|final
+name|boolean
+name|excludeOfflinedSplitParents
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 specifier|final
 name|Map
 argument_list|<
@@ -687,16 +726,21 @@ condition|)
 return|return
 literal|true
 return|;
+name|HRegionInfo
+name|hri
+init|=
+name|region
+operator|.
+name|getFirst
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
 name|disabledTables
 operator|.
 name|contains
 argument_list|(
-name|region
-operator|.
-name|getFirst
-argument_list|()
+name|hri
 operator|.
 name|getTableDesc
 argument_list|()
@@ -708,14 +752,24 @@ condition|)
 return|return
 literal|true
 return|;
+comment|// Are we to include split parents in the list?
+if|if
+condition|(
+name|excludeOfflinedSplitParents
+operator|&&
+name|hri
+operator|.
+name|isSplitParent
+argument_list|()
+condition|)
+return|return
+literal|true
+return|;
 name|regions
 operator|.
 name|put
 argument_list|(
-name|region
-operator|.
-name|getFirst
-argument_list|()
+name|hri
 argument_list|,
 name|region
 operator|.
@@ -1846,6 +1900,40 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+return|return
+name|getTableRegions
+argument_list|(
+name|catalogTracker
+argument_list|,
+name|tableName
+argument_list|,
+literal|false
+argument_list|)
+return|;
+block|}
+comment|/**    * Gets all of the regions of the specified table.    * @param catalogTracker    * @param tableName    * @param excludeOfflinedSplitParents If true, do not include offlined split    * parents in the return.    * @return Ordered list of {@link HRegionInfo}.    * @throws IOException    */
+specifier|public
+specifier|static
+name|List
+argument_list|<
+name|HRegionInfo
+argument_list|>
+name|getTableRegions
+parameter_list|(
+name|CatalogTracker
+name|catalogTracker
+parameter_list|,
+name|byte
+index|[]
+name|tableName
+parameter_list|,
+specifier|final
+name|boolean
+name|excludeOfflinedSplitParents
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 if|if
 condition|(
 name|Bytes
@@ -2085,6 +2173,17 @@ name|tableString
 argument_list|)
 condition|)
 block|{
+comment|// Are we to include split parents in the list?
+if|if
+condition|(
+name|excludeOfflinedSplitParents
+operator|&&
+name|info
+operator|.
+name|isSplitParent
+argument_list|()
+condition|)
+continue|continue;
 name|regions
 operator|.
 name|add
