@@ -4879,6 +4879,8 @@ name|zkTable
 operator|.
 name|getDisabledTables
 argument_list|()
+argument_list|,
+literal|true
 argument_list|)
 decl_stmt|;
 if|if
