@@ -674,6 +674,7 @@ Release 0.90.0 - Unreleased
    HBASE-3214  TestMasterFailover.testMasterFailoverWithMockedRITOnDeadRS is
                failing (Gary via jgray)
    HBASE-3216  Move HBaseFsck from client to util
+   HBASE-3219  Split parents are reassigned on restart and on disable/enable
 
 
   IMPROVEMENTS
